css/style.css
body {
  font-family: "Vesper Libre", serif;
  color: #1a1a1a;
  line-height: 1.5;
  margin: 0;
  font-weight: 400;
  font-style: normal;
}

header, footer {
  background-color: #000000;
  color: #ffffff;
  text-align: center
}

img {
  width: 100%;
}

#pitchfork-logo {
  width: 100px;
  padding-top: 8px;
}


main {
  padding: 20px;
}


h1 {
  font-size: 2rem;
  line-height: 1.3;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.news {
  display: inline-block;
  text-transform: uppercase;
  font-size: .85rem;
  border-bottom: 2px solid #ff3530;
}

#open {
  font-family:"Open Sans", sans-serif;
}

caption {
  font-size: .75rem;
  align-content: center;
  color: #757575;
}

.author, .date {
  font-size: .85rem;
  margin-bottom: 0;
}

figure {
  margin: 1.25rem 0;
}

figcaption {
  font-size: .75rem;
  align-items: center;
  color: #757575;
  font-style: italic;
}

.nominee-list {
  list-style: none;
  padding-left: 0;
}

a:link {
  color: #1a1a1a;
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
  color: #ff3530;
}

